--- a/.github/workflows/alloy-sync.yml
+++ b/.github/workflows/alloy-sync.yml
@@ -138,7 +138,8 @@ jobs:
       - name: Wait for Alloy CI and update status
         if: steps.check-deps.outputs.has_relevant_updates == 'true' && github.event.action != 'closed'
         env:
-          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+          ALLOY_TOKEN: ${{ steps.app-token.outputs.token }}
+          GITHUB_TOKEN: ${{ github.token }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           ALLOY_PR_URL: ${{ steps.create-pr.outputs.alloy_pr_url }}
           ALLOY_PR_NUMBER: ${{ steps.create-pr.outputs.alloy_pr_number }}
@@ -150,9 +151,17 @@ jobs:
           INTERVAL=60   # Check every minute
           ELAPSED=0
           
+          # Function to safely comment on PR - won't fail if commenting fails
+          comment_pr() {
+            local body="$1"
+            # Use default GITHUB_TOKEN for commenting on Beyla PR
+            gh pr comment "$PR_NUMBER" --body "$body" || true
+          }
+          
           while [ $ELAPSED -lt $TIMEOUT ]; do
             # Get the status of all checks, handle case where no checks exist yet
-            CHECK_OUTPUT=$(gh pr checks $ALLOY_PR_NUMBER --repo grafana/alloy --json bucket 2>/dev/null || echo '[]')
+            # Use Alloy token for checking Alloy PR status
+            GH_TOKEN="$ALLOY_TOKEN" gh pr checks $ALLOY_PR_NUMBER --repo grafana/alloy --json bucket,name,status 2>/dev/null || echo '[]'
             
             # If no checks yet, consider it pending
             if [ "$CHECK_OUTPUT" = "[]" ]; then
@@ -162,22 +171,25 @@ jobs:
               continue
             fi
             
-            # Extract all buckets
+            # Extract all buckets and show check details
+            echo "Current check status:"
+            echo "$CHECK_OUTPUT" | jq -r '.[] | "- \(.name): \(.status) (\(.bucket))"' || true
+            
             BUCKETS=$(echo "$CHECK_OUTPUT" | jq -r '.[].bucket')
             
             # If any check failed
             if echo "$BUCKETS" | grep -q "fail"; then
-              echo "❌ The Alloy PR checks failed. Please check the PR: ${ALLOY_PR_URL}"
-              # Try to comment, but don't fail if we can't
-              gh pr comment $PR_NUMBER --body "❌ The Alloy PR checks failed. Please check [the PR](${ALLOY_PR_URL}) for details." || true
+              FAIL_MSG="❌ The Alloy PR checks failed. Please check the PR: ${ALLOY_PR_URL}"
+              echo "$FAIL_MSG"
+              comment_pr "❌ The Alloy PR checks failed. Please check [the PR](${ALLOY_PR_URL}) for details."
               exit 1
             fi
             
             # If all checks passed (no pending or failing checks)
             if ! echo "$BUCKETS" | grep -q "pending" && ! echo "$BUCKETS" | grep -q "fail"; then
-              echo "✅ The Alloy PR checks passed. PR ready for review: ${ALLOY_PR_URL}"
-              # Try to comment, but don't fail if we can't
-              gh pr comment $PR_NUMBER --body "✅ The Alloy PR checks passed. The PR is ready for review: ${ALLOY_PR_URL}" || true
+              SUCCESS_MSG="✅ The Alloy PR checks passed. PR ready for review: ${ALLOY_PR_URL}"
+              echo "$SUCCESS_MSG"
+              comment_pr "✅ The Alloy PR checks passed. The PR is ready for review: ${ALLOY_PR_URL}"
               exit 0
             fi
             
@@ -186,9 +198,10 @@ jobs:
             ELAPSED=$((ELAPSED + INTERVAL))
           done
           
-          # If we timeout, try to comment but don't fail if we can't
-          echo "⚠️ Timed out waiting for Alloy PR checks to complete. Please check the PR: ${ALLOY_PR_URL}"
-          gh pr comment $PR_NUMBER --body "⚠️ Timed out waiting for Alloy PR checks to complete. Please check [the PR](${ALLOY_PR_URL}) manually." || true
+          # If we timeout
+          TIMEOUT_MSG="⚠️ Timed out waiting for Alloy PR checks to complete. Please check the PR: ${ALLOY_PR_URL}"
+          echo "$TIMEOUT_MSG"
+          comment_pr "⚠️ Timed out waiting for Alloy PR checks to complete. Please check [the PR](${ALLOY_PR_URL}) manually."
           exit 1
 
       - name: Cleanup Alloy PR and branch
