--- a/.github/workflows/alloy-sync.yml
+++ b/.github/workflows/alloy-sync.yml
@@ -138,8 +138,7 @@ jobs:
       - name: Wait for Alloy CI and update status
         if: steps.check-deps.outputs.has_relevant_updates == 'true' && github.event.action != 'closed'
         env:
-          ALLOY_TOKEN: ${{ steps.app-token.outputs.token }}
-          GITHUB_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           ALLOY_PR_URL: ${{ steps.create-pr.outputs.alloy_pr_url }}
           ALLOY_PR_NUMBER: ${{ steps.create-pr.outputs.alloy_pr_number }}
@@ -151,19 +150,11 @@ jobs:
           INTERVAL=60   # Check every minute
           ELAPSED=0
           
-          # Function to safely comment on PR - won't fail if commenting fails
-          comment_pr() {
-            local body="$1"
-            # Use default GITHUB_TOKEN for commenting on Beyla PR
-            gh pr comment "$PR_NUMBER" --body "$body" || true
-          }
-          
           while [ $ELAPSED -lt $TIMEOUT ]; do
-            # Get the status of all checks, handle case where no checks exist yet
-            # Use Alloy token for checking Alloy PR status
-            GH_TOKEN="$ALLOY_TOKEN" gh pr checks $ALLOY_PR_NUMBER --repo grafana/alloy --json bucket,name,status 2>/dev/null || echo '[]'
+            # Get the status of all checks
+            CHECK_OUTPUT=$(gh pr checks $ALLOY_PR_NUMBER --repo grafana/alloy --json bucket,name,status || echo '[]')
             
-            # If no checks yet, consider it pending
+            # If no checks yet, wait and continue
             if [ "$CHECK_OUTPUT" = "[]" ]; then
               echo "Waiting for checks to start... (${ELAPSED}s elapsed)"
               sleep $INTERVAL
@@ -171,25 +162,22 @@ jobs:
               continue
             fi
             
-            # Extract all buckets and show check details
+            # Show current status
             echo "Current check status:"
-            echo "$CHECK_OUTPUT" | jq -r '.[] | "- \(.name): \(.status) (\(.bucket))"' || true
+            echo "$CHECK_OUTPUT" | jq -r '.[] | "- \(.name): \(.status) (\(.bucket))"' || echo "No check status available"
             
-            BUCKETS=$(echo "$CHECK_OUTPUT" | jq -r '.[].bucket')
+            # Extract buckets for status checking
+            BUCKETS=$(echo "$CHECK_OUTPUT" | jq -r '.[].bucket' || echo "")
             
             # If any check failed
             if echo "$BUCKETS" | grep -q "fail"; then
-              FAIL_MSG="❌ The Alloy PR checks failed. Please check the PR: ${ALLOY_PR_URL}"
-              echo "$FAIL_MSG"
-              comment_pr "❌ The Alloy PR checks failed. Please check [the PR](${ALLOY_PR_URL}) for details."
+              echo "❌ The Alloy PR checks failed. Please check the PR: ${ALLOY_PR_URL}"
               exit 1
             fi
             
             # If all checks passed (no pending or failing checks)
-            if ! echo "$BUCKETS" | grep -q "pending" && ! echo "$BUCKETS" | grep -q "fail"; then
-              SUCCESS_MSG="✅ The Alloy PR checks passed. PR ready for review: ${ALLOY_PR_URL}"
-              echo "$SUCCESS_MSG"
-              comment_pr "✅ The Alloy PR checks passed. The PR is ready for review: ${ALLOY_PR_URL}"
+            if [ -n "$BUCKETS" ] && ! echo "$BUCKETS" | grep -q "pending" && ! echo "$BUCKETS" | grep -q "fail"; then
+              echo "✅ The Alloy PR checks passed. PR ready for review: ${ALLOY_PR_URL}"
               exit 0
             fi
             
@@ -198,10 +186,7 @@ jobs:
             ELAPSED=$((ELAPSED + INTERVAL))
           done
           
-          # If we timeout
-          TIMEOUT_MSG="⚠️ Timed out waiting for Alloy PR checks to complete. Please check the PR: ${ALLOY_PR_URL}"
-          echo "$TIMEOUT_MSG"
-          comment_pr "⚠️ Timed out waiting for Alloy PR checks to complete. Please check [the PR](${ALLOY_PR_URL}) manually."
+          echo "⚠️ Timed out waiting for Alloy PR checks to complete. Please check the PR: ${ALLOY_PR_URL}"
           exit 1
 
       - name: Cleanup Alloy PR and branch
