--- a/test/integration/docker-compose-python-self.yml
+++ b/test/integration/docker-compose-python-self.yml
@@ -41,7 +41,7 @@ services:
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
-      BEYLA_LOG_LEVEL: "INFO"
+      BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_HOSTNAME: "beyla"
       BEYLA_BPF_ENABLE_CONTEXT_PROPAGATION: true
