Introduce context_propagation_enum

--- a/test/integration/docker-compose-python-self.yml
+++ b/test/integration/docker-compose-python-self.yml
@@ -44,7 +44,7 @@ services:
       BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_HOSTNAME: "beyla"
-      BEYLA_BPF_ENABLE_CONTEXT_PROPAGATION: true
+      BEYLA_BPF_CONTEXT_PROPAGATION: "all"
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PORT: 8999
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PATH: /metrics
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
