--- a/test/integration/k8s/manifests/06-beyla-daemonset-multi-node.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset-multi-node.yml
@@ -83,8 +83,8 @@ spec:
               value: "10ms"
             - name: BEYLA_NAME_RESOLVER_SOURCES
               value: "dns,k8s"
-            - name: BEYLA_BPF_ENABLE_CONTEXT_PROPAGATION
-              value: "true"
+            - name: BEYLA_BPF_CONTEXT_PROPAGATION
+              value: "all"
             - name: BEYLA_BPF_DEBUG
               value: "true"
 
