--- a/test/integration/k8s/manifests/00-kind-multi-node.yml
+++ b/test/integration/k8s/manifests/00-kind-multi-node.yml
@@ -3,6 +3,8 @@ kind: Cluster
 name: beyla
 nodes:
   - role: worker
+    labels:
+      cluster.x-k8s.io/cluster-name: beyla-k8s-test-cluster
     kubeadmConfigPatches:
       - |
         kind: JoinConfiguration
@@ -25,6 +27,8 @@ nodes:
       - containerPort: 8080
         hostPort: 38080
   - role: worker
+    labels:
+      cluster.x-k8s.io/cluster-name: beyla-k8s-test-cluster
     kubeadmConfigPatches:
       - |
         kind: JoinConfiguration
@@ -65,6 +69,8 @@ nodes:
       - containerPort: 16686
         hostPort: 36686
   - role: control-plane
+    labels:
+      cluster.x-k8s.io/cluster-name: beyla-k8s-test-cluster
     extraMounts:
       # configuration files that need to be mounted in the host
       - hostPath: ../../configs
