--- a/test/integration/configs/instrumenter-config-go-otel.yml
+++ b/test/integration/configs/instrumenter-config-go-otel.yml
@@ -6,7 +6,7 @@ otel_traces_export:
   endpoint: http://jaeger:4318
 attributes:
   kubernetes:
-    cluster_name: beyla
+    cluster_name: beyla-k8s-test-cluster
   select:
     "*":
       include: ["*"]
