--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Check Clang Format
         run: |
           # Check for modified C/C++ files
-          files=$(git diff --name-status origin/main...HEAD | awk '$1 != "D" && /\.(c|cpp|h)$/ { print ($3 != "" ? $3 : $2) }')
+          files=$(git diff --name-status origin/main...HEAD | awk '$1 != "D" && /\.(c|cpp|h)$/ { print ($3 != "" ? $3 : $2) }' | (grep -v '^vendor' || true))
           if [ -z "$files" ]; then
             echo "No C/C++ files modified."
             exit 0
