--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   release-beyla-helm-chart:
-    uses: grafana/helm-charts/.github/workflows/update-helm-repo.yaml@main
+    uses: grafana/helm-charts/.github/workflows/update-helm-repo.yaml@87cb2cd95f44387e010aa49c22466dd6d86a2ae9 # main
     with:
       charts_dir: charts/beyla
       cr_configfile: .github/configs/cr.yml
