--- a/.github/workflows/update-offsets.yml
+++ b/.github/workflows/update-offsets.yml
@@ -8,16 +8,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: "Checkout repo"
-      uses: actions/checkout@v3
+      uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
     - name: "Update Go"
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5
       with:
+        cache: false  # Disable caching to avoid extraction conflicts
         go-version: '>=1.24'
         check-latest: true
     - name: "Update offsets"
       run: make update-offsets
     - name: "Create/update PR"
-      uses: peter-evans/create-pull-request@v5
+      uses: peter-evans/create-pull-request@4e1beaa7521e8b457b572c090b25bd3db56bf1c5 # v5
       with:
         commit-message: Automatic update of offsets.json
         title: Automatic update of offsets.json
